final intro almost done

--- a/endnote.bib
+++ b/endnote.bib
@@ -475,8 +475,7 @@ Negative gossip about a person renders that person’s face more visible to the 
 	date = {2017},
 	note = {Place: {US}
 Publisher: American Psychological Association},
-	keywords = {Awareness, Emotion Recognition, Face Perception, Visual Perception},
-	file = {Snapshot:/home/hcp4715/Zotero/storage/J22DCIDN/2017-16352-001.html:text/html}
+	keywords = {Awareness, Emotion Recognition, Face Perception, Visual Perception}
 }
 
 @article{gantman_moral_2014,
@@ -540,8 +539,7 @@ Publisher: American Psychological Association},
 	author = {{McNeish}, Daniel and Wolf, Melissa Gordon},
 	urldate = {2020-08-20},
 	date = {2020-04-22},
-	langid = {english},
-	file = {Springer Full Text PDF:/home/hcp4715/Zotero/storage/MVH6TEDR/McNeish and Wolf - 2020 - Thinking twice about sum scores.pdf:application/pdf}
+	langid = {english}
 }
 
 @article{
@@ -593,8 +591,7 @@ _mad_2020,
 	urldate = {2020-09-07},
 	date = {2019-10-01},
 	langid = {english},
-	keywords = {goal-directed decision-making, homeostasis, medial prefrontal cortex, reinforcement learning, reward, value},
-	file = {ScienceDirect Snapshot:/home/hcp4715/Zotero/storage/DNLBLVY3/S1364661319302001.html:text/html}
+	keywords = {goal-directed decision-making, homeostasis, medial prefrontal cortex, reinforcement learning, reward, value}
 }
 
 @article{shadlen_decision_2013,
@@ -847,8 +844,7 @@ _mad_2020,
 	urldate = {2020-09-29},
 	date = {2017-08-01},
 	langid = {english},
-	note = {Publisher: {SAGE} Publications Inc},
-	file = {SAGE PDF Full Text:/home/hcp4715/Zotero/storage/KWWICJ8L/Tappin and McKay - 2017 - The Illusion of Moral Superiority.pdf:application/pdf}
+	note = {Publisher: {SAGE} Publications Inc}
 }
 
 @article{abele_navigating_2020,
@@ -877,8 +873,7 @@ _mad_2020,
 	urldate = {2020-09-29},
 	date = {2012-01-30},
 	langid = {english},
-	keywords = {N170, P1, Posterior-occipital negativity, Trustworthiness perception},
-	file = {ScienceDirect Snapshot:/home/hcp4715/Zotero/storage/2AA2GAB7/S0006899311021317.html:text/html}
+	keywords = {N170, P1, Posterior-occipital negativity, Trustworthiness perception}
 }
 
 @article{stanley_moral_2019,
@@ -965,8 +960,7 @@ _mad_2020,
 	date = {2020-11-03},
 	langid = {english},
 	note = {Number: 1
-Publisher: Nature Publishing Group},
-	file = {Full Text PDF:/home/hcp4715/Zotero/storage/85LJI65T/Enock et al. - 2020 - Overlap in processing advantages for minimal ingro.pdf:application/pdf;Snapshot:/home/hcp4715/Zotero/storage/ZNVGD3ZA/s41598-020-76001-9.html:text/html}
+Publisher: Nature Publishing Group}
 }
 
 
@@ -1074,8 +1068,7 @@ Publisher: American Psychological Association},
 	author = {Turner, John C. and Hogg, Michael A. and Oakes, Penelope J. and Reicher, Stephen D. and Wetherell, Margaret S.},
 	date = {1987},
 	note = {Pages: x, 239},
-	keywords = {Social Identity, Social Groups, Social Psychology, Social Behavior, Collective Behavior, Group Cohesion, Social Influences},
-	file = {Turner et al. - 1987 - Rediscovering the social group  A self-categoriza.pdf:/home/hcp4715/Zotero/storage/PP3HTTXZ/Turner et al. - 1987 - Rediscovering the social group  A self-categoriza.pdf:application/pdf}
+	keywords = {Social Identity, Social Groups, Social Psychology, Social Behavior, Collective Behavior, Group Cohesion, Social Influences}
 }
 
 @article{turner_self_1994,
@@ -1094,8 +1087,7 @@ Publisher: American Psychological Association},
 	urldate = {2020-10-18},
 	date = {1994-10-01},
 	langid = {english},
-	note = {Publisher: {SAGE} Publications Inc},
-	file = {SAGE PDF Full Text:/home/hcp4715/Zotero/storage/A2856GQ8/Turner et al. - 1994 - Self and Collective Cognition and Social Context.pdf:application/pdf}
+	note = {Publisher: {SAGE} Publications Inc}
 }
 
 
@@ -1160,8 +1152,7 @@ Publisher: American Psychological Association},
 	urldate = {2020-09-09},
 	date = {2020-03-01},
 	langid = {english},
-	note = {Publisher: {SAGE} Publications Inc},
-	file = {Hester and Gray - 2020 - The Moral Psychology of Raceless, Genderless Stran.pdf:/home/hcp4715/Zotero/storage/C9P3CCAV/Hester and Gray - 2020 - The Moral Psychology of Raceless, Genderless Stran.pdf:application/pdf}
+	note = {Publisher: {SAGE} Publications Inc}
 }
 
 
@@ -1199,8 +1190,7 @@ Publisher: American Psychological Association},
 	author = {Waytz, Adam and Dungan, James and Young, Liane},
 	urldate = {2020-10-29},
 	date = {2013-11},
-	langid = {english},
-	file = {Waytz et al. - 2013 - The whistleblower's dilemma and the fairness–loyal.pdf:/home/hcp4715/Zotero/storage/FQJ5LYHX/Waytz et al. - 2013 - The whistleblower's dilemma and the fairness–loyal.pdf:application/pdf}
+	langid = {english}
 }
 
 @article{ellemers_psychology_2019,
@@ -1219,8 +1209,7 @@ Publisher: American Psychological Association},
 	urldate = {2020-11-03},
 	date = {2019-11-01},
 	langid = {english},
-	note = {Publisher: {SAGE} Publications Inc},
-	file = {SAGE PDF Full Text:/home/hcp4715/Zotero/storage/T7XVXXQD/Ellemers et al. - 2019 - The Psychology of Morality A Review and Analysis .pdf:application/pdf}
+	note = {Publisher: {SAGE} Publications Inc}
 }
 
 @article{van_der_lee_or_2017,
@@ -1240,8 +1229,7 @@ Publisher: American Psychological Association},
 	date = {2017},
 	langid = {english},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ejsp.2269},
-	keywords = {morality, competence, threat, deviance, exclusion, intragroup processes},
-	file = {Snapshot:/home/hcp4715/Zotero/storage/2DBJWIKZ/ejsp.html:text/html;Full Text:/home/hcp4715/Zotero/storage/6TXIQYWG/Lee et al. - 2017 - In or out How the perceived morality (vs. compete.pdf:application/pdf;Snapshot:/home/hcp4715/Zotero/storage/MJPH3L8T/ejsp.html:text/html}
+	keywords = {morality, competence, threat, deviance, exclusion, intragroup processes}
 }
 
 
@@ -1258,8 +1246,7 @@ Publisher: American Psychological Association},
 	author = {Dang, Junhua and King, Kevin M. and Inzlicht, Michael},
 	urldate = {2020-07-13},
 	date = {2020-04},
-	langid = {english},
-	file = {Dang et al. - 2020 - Why Are Self-Report and Behavioral Measures Weakly.pdf:/home/hcp4715/Zotero/storage/W45PPDRD/Dang et al. - 2020 - Why Are Self-Report and Behavioral Measures Weakly.pdf:application/pdf}
+	langid = {english}
 }
 
 @article{jones_which_2021,
@@ -1400,8 +1387,7 @@ Publisher: American Psychological Association},
 	date = {2018-10},
 	langid = {english},
 	note = {Number: 10
-Publisher: Nature Publishing Group},
-	file = {siegel2018.pdf:/home/hcp4715/Zotero/storage/HVYZ22HQ/siegel2018.pdf:application/pdf}
+Publisher: Nature Publishing Group}
 }
 
 
@@ -1573,8 +1559,7 @@ Section: Social Sciences},
 	langid = {english},
 	pmid = {17510357},
 	note = {Publisher: American Association for the Advancement of Science
-Section: Review},
-	file = {Snapshot:/home/hcp4715/Zotero/storage/6HVFCYII/998.html:text/html;Full Text PDF:/home/hcp4715/Zotero/storage/WWKQKIL5/Haidt - 2007 - The New Synthesis in Moral Psychology.pdf:application/pdf}
+Section: Review}
 }
 
 
@@ -1610,8 +1595,7 @@ Publisher: American Psychological Association},
 	date = {2008-08},
 	pmid = {18729580},
 	pmcid = {PMC2761963},
-	keywords = {Learning, Affect, Female, Male, Humans, Adult, Social Perception, Facial Expression, Environment, Extraversion, Psychological},
-	file = {Accepted Version:/home/hcp4715/Zotero/storage/QYPHEBJK/Bliss-Moreau et al. - 2008 - Individual differences in learning the affective v.pdf:application/pdf}
+	keywords = {Learning, Affect, Female, Male, Humans, Adult, Social Perception, Facial Expression, Environment, Extraversion, Psychological}
 }
 
 
@@ -1628,8 +1612,7 @@ Publisher: American Psychological Association},
 	author = {Falvello, Virginia and Vinson, Michael and Ferrari, Chiara and Todorov, Alexander},
 	urldate = {2021-03-12},
 	date = {2015-10-01},
-	note = {Publisher: Guilford Publications Inc.},
-	file = {Submitted Version:/home/hcp4715/Zotero/storage/U2MM38ZZ/Falvello et al. - 2015 - The Robustness of Learning about the Trustworthine.pdf:application/pdf}
+	note = {Publisher: Guilford Publications Inc.}
 }
 
 
@@ -1648,8 +1631,7 @@ Publisher: American Psychological Association},
 	urldate = {2021-03-11},
 	date = {2008-09-01},
 	langid = {english},
-	note = {Publisher: Oxford Academic},
-	file = {Snapshot:/home/hcp4715/Zotero/storage/2AEQI9SP/1729173.html:text/html;Full Text PDF:/home/hcp4715/Zotero/storage/5RTEKL5Q/Todorov and Olson - 2008 - Robust learning of affective trait associations wi.pdf:application/pdf}
+	note = {Publisher: Oxford Academic}
 }
 
 
@@ -1670,8 +1652,7 @@ Publisher: American Psychological Association},
 	langid = {english},
 	pmid = {21646524},
 	note = {Publisher: National Academy of Sciences
-Section: Biological Sciences},
-	file = {Full Text PDF:/home/hcp4715/Zotero/storage/KGHHUEA2/Anderson et al. - 2011 - Value-driven attentional capture.pdf:application/pdf;Snapshot:/home/hcp4715/Zotero/storage/HGZN6KXQ/10367.html:text/html}
+Section: Biological Sciences}
 }
 
 
@@ -1689,8 +1670,7 @@ Section: Biological Sciences},
 	author = {Anderson, Brian A},
 	urldate = {2021-03-22},
 	date = {2019-10-01},
-	langid = {english},
-	file = {ScienceDirect Snapshot:/home/hcp4715/Zotero/storage/38JMWLHF/S2352250X1830174X.html:text/html}
+	langid = {english}
 }
 
 
@@ -1707,6 +1687,41 @@ Section: Biological Sciences},
 	date = {2007},
 	note = {Place: {US}
 Publisher: American Psychological Association},
-	keywords = {Agency, Attribution, Independence (Personality), Judgment, Self-Perception, Social Behavior, Social Cognition, Social Perception},
-	file = {Snapshot:/home/hcp4715/Zotero/storage/TRDW3KKA/2007-15390-004.html:text/html;Full Text:/home/hcp4715/Zotero/storage/WY755C95/Abele and Wojciszke - 2007 - Agency and communion from the perspective of self .pdf:application/pdf}
+	keywords = {Agency, Attribution, Independence (Personality), Judgment, Self-Perception, Social Behavior, Social Cognition, Social Perception}
+}
+
+
+@article{pratto_automatic_1991,
+	title = {Automatic vigilance: the attention-grabbing power of negative social information},
+	volume = {61},
+	issn = {0022-3514},
+	doi = {10.1037//0022-3514.61.3.380},
+	shorttitle = {Automatic vigilance},
+	abstract = {One of the functions of automatic stimulus evaluation is to direct attention toward events that may have undesirable consequences for the perceiver's well-being. To test whether attentional resources are automatically directed away from an attended task to undesirable stimuli, Ss named the colors in which desirable and undesirable traits (e.g., honest, sadistic) appeared. Across 3 experiments, color-naming latencies were consistently longer for undesirable traits but did not differ within the desirable and undesirable categories. In Experiment 2, Ss also showed more incidental learning for undesirable traits, as predicted by the automatic vigilance (but not a perceptual defense) hypothesis. In Experiment 3, a diagnosticity (or base-rate) explanation of the vigilance effect was ruled out. The implications for deliberate processing in person perception and stereotyping are discussed.},
+	pages = {380--391},
+	number = {3},
+	journaltitle = {Journal of Personality and Social Psychology},
+	shortjournal = {J Pers Soc Psychol},
+	author = {Pratto, F. and John, O. P.},
+	date = {1991-09},
+	pmid = {1941510},
+	keywords = {Adult, Arousal, Attention, Color Perception, Female, Humans, Male, Personality, Reaction Time, Social Desirability, Social Perception}
+}
+
+
+@article{pool_attentional_2016,
+	title = {Attentional bias for positive emotional stimuli: A meta-analytic investigation},
+	volume = {142},
+	issn = {1939-1455(Electronic),0033-2909(Print)},
+	doi = {10.1037/bul0000026},
+	shorttitle = {Attentional bias for positive emotional stimuli},
+	abstract = {Despite an initial focus on negative threatening stimuli, researchers have more recently expanded the investigation of attentional biases toward positive rewarding stimuli. The present meta-analysis systematically compared attentional bias for positive compared with neutral visual stimuli across 243 studies (N = 9,120 healthy participants) that used different types of attentional paradigms and positive stimuli. Factors were tested that, as postulated by several attentional models derived from theories of emotion, might modulate this bias. Overall, results showed a significant, albeit modest (Hedges’ g = .258), attentional bias for positive as compared with neutral stimuli. Moderator analyses revealed that the magnitude of this attentional bias varied as a function of arousal and that this bias was significantly larger when the emotional stimulus was relevant to specific concerns (e.g., hunger) of the participants compared with other positive stimuli that were less relevant to the participants’ concerns. Moreover, the moderator analyses showed that attentional bias for positive stimuli was larger in paradigms that measure early, rather than late, attentional processing, suggesting that attentional bias for positive stimuli occurs rapidly and involuntarily. Implications for theories of emotion and attention are discussed. ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	pages = {79--106},
+	number = {1},
+	journaltitle = {Psychological Bulletin},
+	author = {Pool, Eva and Brosch, Tobias and Delplanque, Sylvain and Sander, David},
+	date = {2016},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Attentional Bias, Emotions, Rewards}
 }
